--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "Node",
     "rootDir": "./src",
     "outDir": "./dist",
-
+    "types": ["node"],
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
